--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ matplotlib
 mario-gpt
 send2trash
 cmaes
+huggingface_hub
 timm==0.9.12
 
 #git+https://github.com/williamsr03/LodeRunner.git@Reid#egg=LodeRunner
