include Lode Runner

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,4 @@ cmaes
 huggingface_hub
 timm==0.9.12
 
-#git+https://github.com/williamsr03/LodeRunner.git@Reid#egg=LodeRunner
+git+https://github.com/williamsr03/LodeRunner.git@Reid#egg=LodeRunner
